# hl-opencv

./: .gitignore  CMakeLists.txt  README.md  build.sh  haxelib.json  setup.sh
generator/: Generator.hx
lib/opencv/: Native.hx  opencv.idl
opencv/: opencv.idl
src/: hl-idl-helpers.hpp  hl-opencv.h  opencv.cpp
tests/: Test.hx
